@@ -1,20 +1,16 @@
 AUX gitlab-ci-multi-runner.conf 44 SHA256 0b93ba53d557fbf603b50f6d78eb2c4415b9a79f056142b6edf4a63fc6612d6e SHA512 1f5ff480740b18fc985ae9337b8dc4ddd1bde5253e09042b5542cb9a3db54b9cef1f7b24445c829eb83fcfd8751b693018154f6b97ce0a6e723d5d71d9a27429 WHIRLPOOL fc5218c55917b3303baf649fbafaf1dc50cf52d0ee04852716defe4f21b806f4f313071b1c55920d89da66180405d35da0f7cca73c2617b70bcaa67f725cab2a
 AUX gitlab-ci-multi-runner.init 702 SHA256 7a19a20f0b3138a86d805872706ebc2918b01663cfdb351aa2d2cb89707602e9 SHA512 005e10a1c2974209f74efb5899d8f7627284947b716049a5211a2c5767a43b7a629061d96a6f445646f88cdb4afb9918fc2d154d68fabd4fe8ec4e0b9fd0125f WHIRLPOOL 85100f9a311ce1a39adddc10dee5af7862dceff5ae24e30c2830b74cdf78d74357fc0f0b43010a79909caf31e33439f0facc5dbd8e87b6452180093d1058eb3d
-DIST gitlab-ci-multi-runner-bin-1.4.1-amd64 59770288 SHA256 b6c732e737fab160199cc91ba443c496720b3274e48600adf2a8f3814af9d8ac SHA512 0533bd8382d31d048cee4c37bff1277f30641be021f9c8a0d2d7c40a53839ee08589b77cb40d21a26facd016dbd1816b8a8ff1524f196bebff7851c378384615 WHIRLPOOL 32dae2b897c8656151c82d37141be5cca2f6080ae0de21a10914652d9919900b4fad274d3cdb1c0b075f3634cc24aa51b466420a497c5405c978fa4062c8f0e8
-DIST gitlab-ci-multi-runner-bin-1.4.1-arm 56437360 SHA256 301f4a166b76b44361e566c7806c1b9cf63e4e62e3b621e5c31b0bcc707f674a SHA512 efc062285f862e8b1c4a39454f9f15ca722ed58d82aabbc5f72d8d8c5328adef8eddc98ff8cb2dbb616561b825b619dfc52cc69dfc358fbc6d2f4934f9c9fcfe WHIRLPOOL 682fad03439d1a6570b0bccf694adc577a653917ba0fa0315fbb717d27127995bbb2950eace663cd96ca64234c5ac51ec652f59ebe657ad0183d7b4a74c30f85
-DIST gitlab-ci-multi-runner-bin-1.4.1-x86 56606472 SHA256 6606bf3177a2355916833bd2656fc9d0e46dd0e5b7b149105bd283e2a4a67baf SHA512 8266b110088c2559632ab6f26cf54e19a0458de1f858fe3e986bc9c78fbe592fb1492aa4d5187c934a8b2c1bcac15cf10cd7de1207c76a8d6a5302cb4e2cda92 WHIRLPOOL 1c1dd94a8b2efbf39284a51bc60efc1eb58a17bdc927658153ee505cfb6a9ed0dc2160791cacc72e10beb2155b813e71ebbb82abe54c1dd5566200ef02082e2f
-DIST gitlab-ci-multi-runner-bin-1.5.0-amd64 40162568 SHA256 8068a7c0a149cda3782ea58b29ac1f1dfb7018d2021359b2be6094493a86fbf0 SHA512 e06c2aa44d7c369bfa6315221bac19670c97268f64660a320fa9872f86991c1f3c3ef25a9cd233b5769bbf30e1a4958d347f7bbb991dbf10696666332d763314 WHIRLPOOL 4b9e5e06671955245116693d73e5158c0e6a9455127cf6703222a353467c3c57128df0ad682dc47db37b20f98e2a870b5e32344c69c64f301a4611c451305569
-DIST gitlab-ci-multi-runner-bin-1.5.0-arm 36718736 SHA256 38849b5948d892b505f2d8b01b777ed4b22eea2a6ce91aeaf276c3ad6fcb56cd SHA512 14439be83d1f5cb3a2e2b67421138ef4b6ea2ed6636214f082f4db32786a6707c4299c23410ba6c54e06079358acdf84e3a0ee9c5280c17f06576463607187c4 WHIRLPOOL ca677e0d62323021ec477fa031cc1a8cab76757101abe7033c0c1da632f99d225c622792d07df93b935467a7ed987e2cbe6c4dd00e16f06ad3988d4bd21623d2
-DIST gitlab-ci-multi-runner-bin-1.5.0-x86 36892864 SHA256 029e1a570ff5f5f570d107cb451b2a759829ba64fde6965a1d4abc6135ef63be SHA512 06d55f40e3d43ef3524266fec1c009372bb18850394ec5688979fe6bf33e3bf864aa0582ff0de5eb1e088ce2a24b09bdb6a2772643a15f4d8e994c7f194197a9 WHIRLPOOL 8ede1609492f33599078129a44c28eb58f850da715d091b847a753589a68cfac9f206f9c5e7b78eddad67a834279fbd4cd72a7fb5ea09075aa16729f70edeff2
 DIST gitlab-ci-multi-runner-bin-1.6.0-amd64 81450584 SHA256 09dbfd1770253e4216de45e3de359707b9e48d1cd406fe7a7108f0d46880f9c8 SHA512 03c0f1a364509fceaea7c3250885f1d65349cc7b3b9febcb2b67f300b371fcf307f2e44f8c7da57776c05c57c350685459b0167f9dfe1d239d3c472d674dc35e WHIRLPOOL 80dd59f5343efd4a3f0278e66bb1ec7f9b64ed6c16580a9ea9c0554469bf668a7a1553c70e79ffe25e18fe6bea61d219112509ef30c38dc8cb56c4fccc4e37a4
 DIST gitlab-ci-multi-runner-bin-1.6.0-arm 71394024 SHA256 ce42d293752d2781f1d657da6489ebf6f8df610df72742f144004fd12bf88cac SHA512 d23a95d367a9b68fc456fe67a7f243a824f0d1ddb5015740ede83297d328d31e34203ba4d49bac87a81bdefde1ae9aca401016777aaae33c9a4965441ae05381 WHIRLPOOL 8c0a70aab601d785400d1f0993581f41243ac4c01618cd8ff5dc60229cf2184a76adf7e9a1cc1b6ed99392a1aeb17177909dc78d877f71a4126a0990e57b6b8f
 DIST gitlab-ci-multi-runner-bin-1.6.0-x86 72066176 SHA256 ab59163f79e327a1bf6a6d1469762d1f113484b561c6c4dcc07fda127068d9f4 SHA512 ce9eb72e86bd9a2ccd40be585b8f4645d7eb471a4b35a79b4c91dedb95611162c60f2a5e098774ac0879d1dd97f98431372e47e9c5152971d11591a502b0e96f WHIRLPOOL b05f559e04756f2f7cd05a833dbdabf008a98cf1314a81021c76d1c9c2afd4df7d1d5f4c2a585ef97f72dfeef84f2c01e8a6cabba8b018e1ab99ae7ff106b3f4
 DIST gitlab-ci-multi-runner-bin-1.7.0-amd64 68204551 SHA256 367ed93a9b37026bf1679d43e1d150c7edda151e5c5807e43a0b85706a368de6 SHA512 f516046b29b16ba51e9124aa6e2d97bf549628567cafe3e72c49160945f39ac954a31e7460460b06119b8baa59e3724c515aa6635f8cc7e845cfc4e647ca66bf WHIRLPOOL 25f41cbeff6d441bfd11d6cc2b335d594f67c2f995268fd2a65f2da021792abcb9877adcf8f27d33194ad8dcbcc26d96b3b86d193e448143d717ac6b9dd973c6
 DIST gitlab-ci-multi-runner-bin-1.7.0-arm 64871891 SHA256 b30873ec3fbc1510fdd92e64afb1cd5bc11db295eb5da7d4d4931211a40d4d8d SHA512 0988ef4bbae45e114eed98a6bc47284df26b4d283aeda5ae6be17a79d7bc416e060234e30592c8d44804ee56cbdd45be33777edd4cde4f8a4cc101516aff613c WHIRLPOOL 77fd1538e7e7a1513e2b31ccc9998fb5aea95c974808ca4f56a3e60bcb37f216a37b1ca0ead5d826ccb8712a0554baee300d5fe845bf9fcdd6094be6a0e177ee
 DIST gitlab-ci-multi-runner-bin-1.7.0-x86 64635954 SHA256 4028364f26e9169f04e37beb404aebfaa5f0ad2560e6dccda302f9acd73e47a5 SHA512 56fea1b4b5de617b998c998edeb914eb0500de597fead2c37bd81526b48822c84a49c8263567c2f3ece3d2bab50287162b66fbeec5c0f9e1e2159c115a6c14ed WHIRLPOOL 3238e95cbd742b7057c224fb8d0a7511f7dcb0d1c0b07e446d2f0a4f6c7f4e6646e9b1c54cb14cd29c479efbaf113e5e501da54538983307ab8c3f350a36dac3
-EBUILD gitlab-ci-multi-runner-bin-1.4.1.ebuild 2411 SHA256 03e319b28ffb6553cc5aa4ad867197741426f84912453675adecd8a008969f8c SHA512 f3ba80bea5be8de83cde8ad4d892162f55b20f8e7ab28148b0e6c6fd20d7054e06b256196e52d409cf749fd65b1beaf1f56c1dba541ba5b63b7198bad5ee24d2 WHIRLPOOL 02273bd4cbf5a5f15ede2968390f621752940f0af3d398f39bfd20fa3d004fc3c770a12a841440ee3cd70254c510fd7f17e57171b05913555f79a8a7776dc158
-EBUILD gitlab-ci-multi-runner-bin-1.5.0.ebuild 2411 SHA256 fed2bdcf3a3e22c251e209fe70db415d863b19503a9aae1d83140cee1c7430f6 SHA512 9885ceb82acbf2c3354d42251f83555bee0278b698e064096d462ff8fc469b2afe675c6b1a59b9c3a0d724e087f5c071f466bafb40437ea8783a239b68b5d624 WHIRLPOOL dd31877c8e4e0e5bcb94d1b41d1342f531aad8e2f2fa3fbb25139d5e1f4a406bd212da97d30e8c90645d46a3ddecb07446c527b4ce4e46f1e670f13107fb1640
+DIST gitlab-ci-multi-runner-bin-1.8.0-amd64 69057552 SHA256 851e5b438d0b04a633623437794c8bb019bb163cba067cf2f60801948937d6c7 SHA512 60fb2440f5e256f4a7d3ab6d3c5731f33328782ba73957107bd122372b59d2c6e1e7511ca8f6c149985bb1d43cf02803c60022ffbb74d5d173033caebe3103a0 WHIRLPOOL 93c007f122bfcbe8c4f8385a5af79b3a2d028136e6c2187f6b7461ece4aef4c60bbee4ef4121bc8b692195674727719543c081875bd1b00f51a2898d464409d9
+DIST gitlab-ci-multi-runner-bin-1.8.0-arm 65672013 SHA256 a9047148ea205225a88a1026f51dfb565bed69cfafd3123beaa1955b169bd193 SHA512 2156bda5fe3818f024059bfd2d735c20398f6c386198ec0edb6ee83ee0439c3e03cdfbd9bf6bb19b446d2dbc28f553f404be3d3df1703b5f95c2f3d000fd16e8 WHIRLPOOL 0a831afefe3453b75f97248ebab197f633a97232abc8699b5120afd0aca327ef3733b8709feb0fb5108cafb7cc4b9c16649c38a0ca90978d099343ae077a5289
+DIST gitlab-ci-multi-runner-bin-1.8.0-x86 65431904 SHA256 88644de0441f33d410928b1aecb0db04dd77ad0870406caec98d3034cbe4cd3f SHA512 f3e6fca39a6146adcf1be72628d47370394dd62097e5b917ee4b8715248b057b20906d032efbf7988127dee5d75b4a0887750e3755a5123e35fabb520297ef13 WHIRLPOOL 2eb8c072263f182912d342b8cacd99aca3e9fe048d05d25275a3fd396603c89a7ce4a7edf97a2552fe2bae2c08647444d4702bbda1296878e3f062338e96500c
 EBUILD gitlab-ci-multi-runner-bin-1.6.0.ebuild 2411 SHA256 df591d547119124d7dbb65f02677f2adce9c00f16dcb68c30fbc1c11aadfd82a SHA512 2d48cf26aa255af15c75e055349f38a96de061e4f3e5185e614f1479b4964938e1b9ee491037e1d5f33e2ce900fc9967cc2ce76ec9dd3f0b89b8eb3ee1c012c2 WHIRLPOOL a0e1505951280c1238ff6649bbfb7ebe2e14930057180fe9387354017c44e16b47eb83cb5173a80d13619cf981a5da3c263d9008b9444ba04cd691e5f2ca99d9
 EBUILD gitlab-ci-multi-runner-bin-1.7.0.ebuild 2411 SHA256 cc4d039a20156f466d2b5e8fa332dc623bd948c86601ece073c3700ed12fa6a2 SHA512 4e5740ce6512894a36187f4dc76833daeec18288ad079b5bf434a2bef65ad806e8cb21a00a09d9f7714eb029f726036105c0d12b77ddc8a7f7833c6fc7d1aa40 WHIRLPOOL 855db2c82a377297c81beb10bc4a3c0196cd0ee0ba8cc89d0a9aca9785109af0864afeb18aa5a9ce71e34093235015b7a45d9eaf8f95a21de71a6bade9955ec8
-MISC ChangeLog 2654 SHA256 2131478526b2405d90dce83b6cd5d58f99443e428fb3e648de5284f08df8afd3 SHA512 00025f63e1b7b95249044c6efdc7653fc7b7e45b68da91dcf8a19a8de3d04a3d9672a3afe51fa29e618914765f18cb011964652b8815a968e92a791d3d602265 WHIRLPOOL 0f27eeacce4d0d3637a18fa07dd1958ce0a76a4a4a848f324373fc90e56f13824e8afe0ba5e59aa91e5bdba334af469a13f9b5247fcafbc8db301bfa26a29ffe
+EBUILD gitlab-ci-multi-runner-bin-1.8.0.ebuild 2411 SHA256 b40c9371273c2be43a7b1d93d125791afaf6c9cce21bf24fa926f95b73842d2f SHA512 117b6c5ea58d546356bc334e7eca3fbdd65954cb61573e6422753742083ea3e949513fbe161ed2e5c0dd73e94876a4bf7977b00dd7d9a87efc4988a83f3b7efb WHIRLPOOL 4b5196976691b1b5feedaef59be60f0e246bdfd237cce269d5ac1f2879bc82341ee3761a512f403fd19737143dd884d4985955e023b8df87bad0f31fe861d1d1
+MISC ChangeLog 2995 SHA256 28132dae936efd153b5923e389f7cc3a9b3397bb84a09db4a7ee67f4550653f6 SHA512 cfcd1448295615bfca384461c3601c2de5308c12ff1ba544821af5f878d2e58da4b7c5ab73da448af8ea5e9b6f08a8b7d71e9db329ebfbe2744b1ed01be2051d WHIRLPOOL 7b932135c6c51547b3423bec14b40900c033e37f302c184817fb93223cacde74737d08ce1d6450ffa8f07c2a378b4e4e80fecdd9e218142a764ad80b2011a1c7
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
